[tool]
[tool.poetry]
name = "onequant"
version = "0.1.1"
homepage = "https://github.com/xunzhimeng/onequant"
description = "python package for quant trading and ai learning."
authors = ["recluse <853641471@qq.com>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

packages = [
    { include = "onequant" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.*,<3.12"

black  = { version = "^22.10.0", optional = true}
isort  = { version = "^5.10.1", optional = true}
flake8  = { version = "^5.0.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^0.982", optional = true}
pytest  = { version = "^7.1.2", optional = true}
pytest-cov  = { version = "^4.0.0", optional = true}
tox  = { version = "^3.25.1", optional = true}
virtualenv  = { version = "^20.16.2", optional = true}
pip  = { version = "^22.2.0", optional = true}
mkdocs  = { version = "^1.3.1", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.6.1", optional = true}
mkdocs-material  = { version = "^8.3.9", optional = true}
mkdocs-material-extensions  = { version = "^1.0.3", optional = true}
mkdocstrings  = {extras = ["python"], version = "^0.19.0"}
twine  = { version = "^4.0.1", optional = true}
pre-commit = {version = "^2.20.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
dynaconf = {version = "^3.1.12", optional = true}
requests = {version = "^2.28.2", optional = true}
pandas = "^2.0.0"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
